--- a/index.html
+++ b/index.html
@@ -15,5 +15,21 @@
         </button>
     </header>
 
+    <div class="container">
+        <ul class="todo">
+            <li>
+                This is an item
+                <div class="buttons">
+
+                </div>
+            </li>
+        </ul>
+
+        <!--    <ul class="todo">-->
+
+        <!--    </ul>-->
+    </div>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
